--- a/welcome.html
+++ b/welcome.html
@@ -4,7 +4,7 @@
         <title>Welcome</title>
         <link href="css/style.css" rel="stylesheet" type="text/css"/>
     </head>
-    <body>
+    <body id="welcome">
         <h1>Congrats! Your account was created!</h1>
     </body>
 </html>
